--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyPlaylist"
         tools:targetApi="31">
         <activity
+            android:name=".search"
+            android:exported="false" />
+        <activity
+            android:name=".mediasherch"
+            android:exported="false" />
+        <activity
             android:name=".settings"
             android:exported="false" />
         <activity
