--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,20 @@
         tools:targetApi="31">
         <activity
             android:name=".search"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".mediasherch"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".settings"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
