--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,13 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyPlaylist"
         tools:targetApi="31">
+
         <activity
             android:name=".SearchActivity"
             android:exported="false" />
         <activity
             android:name=".MediaSearchActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
